# film-intelligence-agent

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-report.yml
config/: film_greenlight_scraper_spec.yaml
scripts/: bootstrap_github.py  first_run.sh  run_if_toronto_9.py
src/film_intel_agent/: __init__.py
src/film_intel_agent/cli/: main.py
src/film_intel_agent/config/: settings.py
src/film_intel_agent/db/: models.py  session.py
src/film_intel_agent/domain/: __init__.py  types.py
src/film_intel_agent/email/: send.py
src/film_intel_agent/fetching/: __init__.py  http.py
src/film_intel_agent/imdb/: __init__.py  ingestion.py
src/film_intel_agent/parsers/: base.py
src/film_intel_agent/reports/: render.py
src/film_intel_agent/scoring/: opportunity.py
src/film_intel_agent/services/: bootstrap.py  discovery.py  films.py  orchestrator.py  queries.py  reports.py  review.py  source_registry.py
src/film_intel_agent/utils/: text.py
src/film_intelligence_agent/: __init__.py
src/film_intelligence_agent/cli/: main.py
src/film_intelligence_agent/config/: settings.py
src/film_intelligence_agent/db/: models.py  session.py
src/film_intelligence_agent/domain/: types.py
src/film_intelligence_agent/email/: __init__.py  send.py
src/film_intelligence_agent/fetching/: http.py
src/film_intelligence_agent/imdb/: __init__.py  ingestion.py
src/film_intelligence_agent/parsers/: base.py
tests/: test_normalize.py  test_parsers.py  test_quality.py  test_report.py  test_report_render.py  test_scoring.py  test_text.py
(+31 files in other folders)
